--- a/DogWalk/Base.lproj/Main_iPhone.storyboard
+++ b/DogWalk/Base.lproj/Main_iPhone.storyboard
@@ -24,7 +24,120 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SnH-0R-nCE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="574" y="55"/>
+            <point key="canvasLocation" x="438" y="571"/>
+        </scene>
+        <!--Playpals Table View Controller - Playpals-->
+        <scene sceneID="1oO-4f-XT6">
+            <objects>
+                <tableViewController id="lfk-8x-7ag" customClass="PlaypalsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="U3u-aS-abl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playpal cell" textLabel="gMS-Y6-2Qf" imageView="pCX-oz-Ti4" style="IBUITableViewCellStyleDefault" id="VQ8-Hk-tF7">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VQ8-Hk-tF7" id="6yq-Xp-cCA">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gMS-Y6-2Qf">
+                                            <rect key="frame" x="106" y="0.0" width="199" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Peter_Brian3" id="pCX-oz-Ti4">
+                                            <rect key="frame" x="15" y="0.0" width="76" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lfk-8x-7ag" id="Ie9-og-MbK"/>
+                            <outlet property="delegate" destination="lfk-8x-7ag" id="gaI-16-hiW"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Playpals" id="FjU-JY-E5R">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="DPf-Rv-E8w"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="sidebarButton" destination="DPf-Rv-E8w" id="PNe-Pm-ldd"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6sn-OZ-JQz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1760" y="298"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CXQ-yu-6Ik">
+            <objects>
+                <viewController id="uC7-Gg-UBt" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Uwn-DV-WNX"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ww6-vp-UDu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Y7w-Ux-ijv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cdl-Mp-Gf6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1770" y="907"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="lbq-jb-bwS">
+            <objects>
+                <tableViewController id="uxa-MG-vcE" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5ZC-ta-qq2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="7bJ-fS-kPm">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7bJ-fS-kPm" id="XM8-8U-dZj">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="uxa-MG-vcE" id="oqr-BS-fF9"/>
+                            <outlet property="delegate" destination="uxa-MG-vcE" id="OM6-6w-jcq"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TFN-6g-bVk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="1486"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kMy-u9-Jx5">
+            <objects>
+                <viewController id="xvD-2e-yt4" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PwE-Nu-RIn"/>
+                        <viewControllerLayoutGuide type="bottom" id="U4r-vs-pM9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6QX-Il-U4Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d6Q-Wf-2Y5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="1514"/>
         </scene>
         <!--Profile View Controller - My Profile-->
         <scene sceneID="ufC-wZ-h7g">
@@ -38,19 +151,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f4N-hN-a94">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peter_Brian" translatesAutoresizingMaskIntoConstraints="NO" id="f4N-hN-a94">
                                 <rect key="frame" x="20" y="77" width="91" height="127"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rTx-3A-sYh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peter_Brian2" translatesAutoresizingMaskIntoConstraints="NO" id="rTx-3A-sYh">
                                 <rect key="frame" x="119" y="146" width="55" height="58"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CsB-iB-FhY">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peter_Brian3" translatesAutoresizingMaskIntoConstraints="NO" id="CsB-iB-FhY">
                                 <rect key="frame" x="182" y="146" width="55" height="58"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7kv-dL-2ho">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peter_Brian4" translatesAutoresizingMaskIntoConstraints="NO" id="7kv-dL-2ho">
                                 <rect key="frame" x="245" y="146" width="55" height="58"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -58,8 +171,8 @@
                                 <rect key="frame" x="20" y="232" width="50" height="58"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Me &amp; Dog" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3II-2I-Rj8">
-                                <rect key="frame" x="127" y="103" width="100" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Me &amp; Dog" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3II-2I-Rj8">
+                                <rect key="frame" x="127" y="103" width="173" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -116,7 +229,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1752" y="-105"/>
+            <point key="canvasLocation" x="1771" y="-319"/>
         </scene>
         <!--Edit Profile View Controller-->
         <scene sceneID="MJz-0U-AOz">
@@ -229,7 +342,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QnC-Zb-xab" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Uwr-o1-R6y" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2118" y="-105"/>
+            <point key="canvasLocation" x="2282" y="-319"/>
         </scene>
         <!--Sidebar View Controller-->
         <scene sceneID="d15-ro-QUn">
@@ -275,6 +388,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="lfk-8x-7ag" kind="custom" identifier="show playpals" customClass="SWRevealViewControllerSegue" id="mYf-2Q-pXc"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="walks" id="1BM-tT-uDX">
                                 <rect key="frame" x="0.0" y="110" width="320" height="44"/>
@@ -291,6 +407,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="uC7-Gg-UBt" kind="custom" identifier="show walks" customClass="SWRevealViewControllerSegue" id="uyJ-TM-XSg"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="settings" id="9Vt-qI-p3E">
                                 <rect key="frame" x="0.0" y="154" width="320" height="44"/>
@@ -307,6 +426,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="uxa-MG-vcE" kind="custom" identifier="show settings" customClass="SWRevealViewControllerSegue" id="eaS-JT-SG0"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="l0E-ye-TKl">
                                 <rect key="frame" x="0.0" y="198" width="320" height="44"/>
@@ -349,7 +471,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BCM-JC-9vY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1123" y="-449"/>
+            <point key="canvasLocation" x="1109" y="877"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="t3k-rX-Ni6">
@@ -371,6 +493,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Peter_Brian" width="194" height="259"/>
+        <image name="Peter_Brian2" width="296" height="86"/>
+        <image name="Peter_Brian3" width="1280" height="720"/>
+        <image name="Peter_Brian4" width="400" height="300"/>
         <image name="dogBone" width="290" height="600"/>
         <image name="footsteps" width="348" height="595"/>
         <image name="menu" width="28" height="20"/>
