--- a/DogWalk/Base.lproj/Main_iPhone.storyboard
+++ b/DogWalk/Base.lproj/Main_iPhone.storyboard
@@ -13,22 +13,51 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playpal cell" textLabel="gMS-Y6-2Qf" imageView="pCX-oz-Ti4" style="IBUITableViewCellStyleDefault" id="VQ8-Hk-tF7">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HeaderCell" rowHeight="72" id="fvl-70-0v9" customClass="HeaderTableViewCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="72"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fvl-70-0v9" id="abW-nc-gbl">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="71"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <segmentedControl contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="fcs-9D-7WR">
+                                            <rect key="frame" x="-3" y="0.0" width="326" height="29"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <segments>
+                                                <segment title="Find New"/>
+                                                <segment title="Current"/>
+                                                <segment title="Pending Requests"/>
+                                            </segments>
+                                        </segmentedControl>
+                                        <searchBar contentMode="redraw" id="nEp-uI-Uva">
+                                            <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </searchBar>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="playpalTypeSelector" destination="fcs-9D-7WR" id="SLM-TD-p6h"/>
+                                    <outlet property="searchBar" destination="nEp-uI-Uva" id="puE-WK-MZ5"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="playpal cell" textLabel="gMS-Y6-2Qf" imageView="pCX-oz-Ti4" rowHeight="60" style="IBUITableViewCellStyleDefault" id="VQ8-Hk-tF7">
+                                <rect key="frame" x="0.0" y="158" width="320" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VQ8-Hk-tF7" id="6yq-Xp-cCA">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="59"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gMS-Y6-2Qf">
-                                            <rect key="frame" x="106" y="0.0" width="179" height="43"/>
+                                            <rect key="frame" x="135" y="0.0" width="150" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Peter_Brian3" id="pCX-oz-Ti4">
-                                            <rect key="frame" x="15" y="0.0" width="76" height="43"/>
+                                            <rect key="frame" x="15" y="0.0" width="105" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </imageView>
                                     </subviews>
@@ -44,7 +73,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Playpals" id="FjU-JY-E5R"/>
+                    <navigationItem key="navigationItem" title="Playpals" id="FjU-JY-E5R" colorLabel="IBBuiltInLabel-Blue"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6sn-OZ-JQz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -87,7 +116,7 @@
             <objects>
                 <viewController storyboardIdentifier="Login" id="Ie4-F8-E5w" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bYc-UM-Nc8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="620"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="de5-XU-RUg">
@@ -386,7 +415,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="620"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="qSp-b5-mby">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="qSp-b5-mby" colorLabel="IBBuiltInLabel-Blue">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="620"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -456,6 +485,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ybn-1K-pyP"/>
+        <segue reference="qaT-fL-t6P"/>
     </inferredMetricsTieBreakers>
 </document>
